# microplate

./: .gitignore  CODE_OF_CONDUCT.md  cli.py  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .env.template  .pre-commit-config.yaml  CHANGELOG.rst  README.md  alembic.ini  justfile  pyproject.toml  readthedocs.yml
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  smth-else.md
{{ cookiecutter.project_slug }}/.github/workflows/: pre-commit.yml
{{ cookiecutter.project_slug }}/docs/: README.md
{{ cookiecutter.project_slug }}/docs/source/: ARCHITECTURE.rst  CONTRIBUTING.rst  DEVELOPMENT.rst  conf.py  index.rst
{{ cookiecutter.project_slug }}/infra/: Dockerfile  docker-compose-prod.yaml
{{ cookiecutter.project_slug }}/src/: main.py
{{ cookiecutter.project_slug }}/src/application/example/: exceptions.py
{{ cookiecutter.project_slug }}/src/domain/common/: __init__.py  aggregate_root.py  base_exception.py  event.py  mapper.py  value_objects.py
{{ cookiecutter.project_slug }}/src/infra/: __init__.py  config.py
{{ cookiecutter.project_slug }}/src/infra/db/: __init__.py
{{ cookiecutter.project_slug }}/src/infra/ioc/: __init__.py  adapters.py  usecases.py
{{ cookiecutter.project_slug }}/src/infra/log/: __init__.py  configuration.py  setup.py
{{ cookiecutter.project_slug }}/src/presentation/: __init__.py  main.py
{{ cookiecutter.project_slug }}/src/presentation/api/: __init__.py
{{ cookiecutter.project_slug }}/src/tests/: locustfile.py
{{ cookiecutter.project_slug }}/src/tests/integration/: conftest.py  test_default.py  test_migration.py
{{ cookiecutter.project_slug }}/src/tests/mocks/: __init__.py  sqlalchemy_provider.py
(+16 files in other folders)
