[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
author = "{{cookiecutter.author}}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "anyio>=4.8.0",
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "dishka>=1.4.2",
    "environs>=14.1.0",
    "fastapi>=0.115.7",
    "greenlet>=3.1.1",
    "locust>=2.32.6",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "orjson>=3.10.15",
    "pre-commit>=4.1.0",
    "prometheus-client>=0.21.1",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
    "result>=0.17.0",
    "structlog>=25.1.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.6.10",
    "deptry>=0.23.0",
    "faker>=35.0.0",
    "httpx>=0.28.1",
    "isort>=6.0.0",
    "locust>=2.32.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-order>=1.3.0",
    "ruff>=0.9.3",
    "testcontainers>=4.9.1",
    "pytest-cov>=6.2.1"
]
docs = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "towncrier (>=24.8.0,<25.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
mypy_path = "src"

[tool.towncrier]
package = "{{cookiecutter.project_name}}"
filename = "CHANGELOG.rst"
directory = "newsfragments"
